# NSBI-workflow-tutorial

./: .gitattributes  .gitignore  Data_Preprocessing.ipynb  LICENSE.txt  Neural_Likelihood_Ratio_training.ipynb  README.md  environment.yml  image.def  mkdocs.yml  pixi.toml  pyproject.toml
FAIR_universe_Higgs_tautau/: 2_data_preprocessing.ipynb  3_preselection_network.ipynb  4_neural_likelihood_ratio_estimation.ipynb  Build_Workspace.ipynb  Data_Loader.ipynb  Data_Preprocessing.ipynb  Data_Preprocessing.py  Neural_Likelihood_Ratio_Ensemble_Estimation.ipynb  Neural_Likelihood_Ratio_Estimation.ipynb  Neural_Likelihood_Ratio_Estimation.py  Parameter_Fitting_with_Systematics.ipynb  Parameter_Fitting_with_Systematics.py  Preselection_withNN.ipynb  Preselection_withNN.py  README.md  Systematic_Uncertainty_Estimation.ipynb  config.pipeline.yaml  config.yml  config_fit_nsbi.yml  config_new.yml  config_training_NN_parms.yml  training_NN_paras.py  utils.py
FAIR_universe_Higgs_tautau/hep_challenge/: README.md  datasets.py  ingestion.py  ingestion_parallel.py  run_ingestion.py  run_scoring.py  systematics.py  visualization.py
FAIR_universe_Higgs_tautau/hpc/: run_step.sh  step.sub  workflow.dag  workflow.dag.condor.sub  workflow.dag.dagman.out
FAIR_universe_Higgs_tautau/htcondor/: job.sub  job_data_loader.sub  job_data_preprocessing.sub  job_density_ratio_eval.sub  job_density_ratio_training.sub  job_parameter_fits.sub  job_preselection_network.sub  job_systematics_training.sub  run_step.sh  stage_data_processing.dag  stage_density_ratio_training.dag  stage_parameter_fitting.dag  stage_preselection_network.dag  step.sub  workflow.dag  workflow_full.dag
FAIR_universe_Higgs_tautau/nsbi_workflow/: run_step.sh  step.sub
FAIR_universe_Higgs_tautau/saved_datasets/: dataset_Asimov_SR.root  dataset_JES_dn.root  dataset_JES_up.root  dataset_TES_dn.root  dataset_TES_up.root  dataset_nominal.root
FAIR_universe_Higgs_tautau/scripts/: data_loader.py  data_nn_eval.py  data_preprocessing.py  nerual_likelihood_ratio_estimation.py  neural_likelihood_ratio_estimation.py  parameter_fitting.py  preselection_network.py  systematic_uncertainty_training.py  utils.py
FAIR_universe_Higgs_tautau/steps/: data_loader.py  systematic_uncertainty_training.py
cms_ttbar_open_data/: Data_Preprocessing.ipynb  Neural_Likelihood_Ratio_Estimation.ipynb  Neural_Likelihood_Ratio_training.ipynb  Parameter_Fitting.ipynb  Parameter_Fitting_Flows_NoSys.ipynb  README.md  Systematic_Uncertainty_Estimation.ipynb  train_flow.py
cms_ttbar_open_data/utils/: __init__.py  file_input.py
common_utils/: inference.py  plotting.py  training.py
docs/: conf.py  index.md  index.rst  workflow_dag.dot  workflow_dag_overview.dot  workflow_dag_stage3.dot
docs/api/: inference.md  inference.rst  model.md  model.rst  training.rst  workspace_builder.rst
docs/basics/: density_ratio_training.rst  fit_config.rst  model_building_example.rst  overview.rst  preselection_training.rst  workflow.rst
examples/FAIR_universe_Higgs_tautau/: 1_data_loader.ipynb  2_data_preprocessing.ipynb  3_preselection_network.ipynb  4_neural_likelihood_ratio_estimation.ipynb  5_systematic_uncertainty_training.ipynb  6_evaluate_networks.ipynb  7_parameter_fitting_with_systematics.ipynb  README.md  config.pipeline.yaml  config_fit_histogram.yml  config_fit_nsbi.yml
examples/cms_ttbar_open_data/: Neural_Likelihood_Ratio_Estimation.ipynb  README.md  evaluate_flows.py
examples/model_building_example/: 1_workspace_building.ipynb  2_parameter_fitting.ipynb  README.md  config_fit_nsbi.yml  parameter_fitting.ipynb  workspace_building.ipynb
src/nsbi_common_utils/: __about__.py  __init__.py  calibration.py  configuration.py  datasets.py  flows.py  inference.py  model.py  plotting.py  training.py  workspace_builder.py
utils/: utils.py
workshops/FAIR_universe_Higgs_tautau/: Neural_Likelihood_Ratio_Estimation.ipynb  Parameter_Fitting_with_Systematics.ipynb  config.yml
workshops/LPC_EFT_workshop_2025/: Data_Visualization.ipynb  Neural_Likelihood_Ratio_Estimation.ipynb  README.md  utils.py  (+1 more)
(+2236 files in other folders)
