[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nsbi-common-utils"
dynamic = ["version"]
description = 'common utilities for Nsbi'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jsandesa", email = "jay.ajitbhai.sandesara@cern.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy"]

[project.urls]
Documentation = "https://github.com/jsandesa/nsbi-common-utils#readme"
Issues = "https://github.com/jsandesa/nsbi-common-utils/issues"
Source = "https://github.com/jsandesa/nsbi-common-utils"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/nsbi_common_utils/_version.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nsbi_common_utils tests}"

[tool.coverage.run]
source_pkgs = ["nsbi_common_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/nsbi_common_utils/__about__.py",
]

[tool.coverage.paths]
nsbi_common_utils = ["src/nsbi_common_utils"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nsbi-common-utils = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pip = ">=25.2,<26"
ipykernel = ">=6.30.1,<7"
pandas = ">=2.3.1,<3"
matplotlib = ">=3.10.5,<4"
coffea = ">=2025.7.3,<2026"
mplhep = ">=0.4.0,<0.5"
pytables = ">=3.10.2,<4"
tensorflow = ">=2.18.0,<3"
scikit-learn = ">=1.7.1,<2"
zuko = ">=1.4.1,<2"
nbconvert = ">=7.16.6,<8"
jax = ">=0.5.2,<0.6"
